006-02-14  Christian Persch  <chpe@cvs.gnome.org>

        * configure.ac:

	Post-release version bump.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.7 ===
	
	* NEWS:
	* configure.ac:

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	
	* m4/gecko.m4:
	
	Add a define and automake conditional for gecko
	debug builds.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	
	* embed/mozilla/EphyPromptService.cpp:

	Use "Username" label for the password dialogue,
	for parity with gnome-password-dialog.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	
	* data/default-prefs-common.js:

	Also use exthandler for snews and nntp.
	
	* data/default-prefs-toolkit.js:

	Add password manager prefs, since xulrunner is
	missing them.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	
	* src/bookmarks/ephy-bookmarks-export.c: (write_rdf):

	Don't export the local bookmarks.

	* src/bookmarks/ephy-bookmarks-menu.c: (append_menu):

	Remove "name" attribute in the UI string, since it's set
	to same value as "action".

	* src/bookmarks/ephy-open-tabs-action.c: (node_added_cb):
	
	Fix untranslated string!

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	
	* lib/ephy-gui.c:
	* lib/ephy-gui.h:

	Remove ephy_gui_window_present.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_file_helpers_init),
	(ephy_file_helpers_shutdown), (ephy_file_delete_on_exit),
	(ephy_file_monitor_cancel), (ephy_file_delete_directory):
	* lib/ephy-file-helpers.h:
	* src/ephy-main.c: (main):

	Move --private-instance out of debug #ifdef.

2006-02-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (resolve_cb), (browse_cb),
	(ephy_local_bookmarks_init), (ephy_local_bookmarks_stop),
	(ephy_bookmarks_finalize), (ephy_bookmarks_new):

	Fix crash when resolve returns an error, bug #331028.
	Restructure 0conf code.

2006-02-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (add_to_favorites),