@@ -1,4 +1,15 @@
-006-02-14  Christian Persch  <chpe@cvs.gnome.org>
+2006-02-10  Peter Harvey  <peter.a.harvey@gmail.com>
+
+	* src/bookmarks/ephy-bookmarks-editor.c
+	
+	Do not create the bookmarks bar when removing bookmarks
+	from the toolbar.
+	
+	* lib/egg/egg-toolbars-model.c
+	
+	Fix infinite loop when a toolbar has no items on it.
+
+2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
 
         * configure.ac:
 
